Feature : Added Individual structure
