# app/salary_surat/schema/swiggy_structure2.py
@@ -1,3 +1,4 @@
+from xml.etree.ElementInclude import include
 from pydantic import BaseModel
 from fastapi import UploadFile, Form
 
@@ -19,6 +20,35 @@ class SuratSwiggySchema(BaseModel):
     bonus_amount_partime: int = 500
     rejection: int = 2
     rejection_amount : int = 20
+    bad_order : int = 2
+    bad_order_amount : int = 20
+
+
+class SuratSwiggySchemaNew(BaseModel):
+    file_id: str
+    file_name : str
+    include_slab : bool = True
+    swiggy_first_order_start: int = 1 
+    swiggy_first_order_end: int = 29
+    swiggy_first_week_amount: int = 30
+    swiggy_first_weekend_amount: int = 32
+    swiggy_order_greter_than: int = 30
+    swiggy_second_week_amount: int = 35
+    swiggy_second_weekend_amount: int = 37
+    include_vahicle_charges: bool = True
+    vahicle_charges_order_fulltime : int = 20
+    vahicle_charges_fulltime : int = 100
+    vahicle_charges_order_partime: int = 12
+    vahicle_charges_partime: int = 70
+    include_bonus : bool = True
+    bonus_order_fulltime: int = 700
+    bonus_amount_fulltime: int = 1000
+    bonus_order_partime: int = 400
+    bonus_amount_partime: int = 500
+    include_rejection : bool = True
+    rejection: int = 2
+    rejection_amount : int = 20
+    include_bad_order : bool = True
     bad_order : int = 2
     bad_order_amount : int = 20
 
